<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">StashAppAndroidTV</string>
    <string name="browse_title" translatable="false">Stash</string>
    <string name="play_scene" translatable="false">Play</string>
    <string name="pref_stash_server_header" translatable="false">Stash</string>
    <string name="pref_stash_server_url" translatable="false">Current server</string>
    <string name="fa_tag" translatable="false">&#xf02b;</string>
    <string name="fa_user" translatable="false">&#xf007;</string>
    <string name="fa_location_dot" translatable="false">&#xf3c5;</string>
    <string name="fa_film" translatable="false">&#xf008;</string>
    <string name="fa_circle_play" translatable="false">&#xf144;</string>
    <string name="fa_image" translatable="false">&#xf03e;</string>
    <string name="fa_images" translatable="false">&#xf302;</string>
    <string name="fa_rotate_right" translatable="false">&#xf2f9;</string>
    <string name="fa_rotate_left" translatable="false">&#xf2ea;</string>
    <string name="fa_arrow_right_arrow_left" translatable="false">&#xf0ec;</string>
    <string name="fa_magnifying_glass_plus" translatable="false">&#xf00e;</string>
    <string name="fa_magnifying_glass_minus" translatable="false">&#xf010;</string>
    <string name="fa_caret_up" translatable="false">&#xf0d8;</string>
    <string name="fa_caret_down" translatable="false">&#xf0d7;</string>
    <string name="fa_heart" translatable="false">&#xf004;</string>
    <string name="fa_video" translatable="false">&#xf03d;</string>
    <string name="fa_play" translatable="false">&#xf04b;</string>
    <string name="fa_pause" translatable="false">&#xf04c;</string>
    <string name="fa_arrow_down_long" translatable="false">&#xf175;</string>
    <string name="fa_arrow_up_long" translatable="false">&#xf176;</string>
    <string name="fa_angle_up" translatable="false">&#xf106;</string>
    <string name="fa_angles_up" translatable="false">&#xf102;</string>
    <string name="fa_angle_down" translatable="false">&#xf107;</string>
    <string name="fa_angles_down" translatable="false">&#xf103;</string>
    <string name="fa_house" translatable="false">&#xf015;</string>
    <string name="fa_closed_captioning" translatable="false">&#xf20a;</string>
    <string name="fa_thumbs_up" translatable="false">&#xf164;</string>
    <string name="fa_gamepad" translatable="false">&#xf11b;</string>
    <string name="go_to">Go to</string>
    <string name="go_to_scene">Go to scene</string>
    <string name="failed_update">Failed to update</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="home">Home</string>
    <string name="app_update_url" translatable="false">https://api.github.com/repos/WYNAT/StashAppAndroidTV/releases/latest</string>
    <string name="setup_1_title">Server URL</string>
    <string name="setup_1_description">Configure the server URL</string>
    <string name="app_name_long">Stash for Android TV</string>
    <string name="first_time_setup">First time setup</string>
    <string name="stash_server_url">Stash Server URL</string>
    <string name="stash_server_url_desc">Enter the URL for your Stash server, including the port if needed</string>
    <string name="preferences">Preferences</string>
    <string name="server_preferences">Server Preferences</string>
    <string name="supported_formats">Supported Formats</string>
    <string name="other">Other</string>
    <string name="logcat" translatable="false">Logcat</string>
    <string name="playback">Playback</string>
    <string name="format">Format</string>
    <string name="play_all">Play All</string>
    <string name="sort_by">Sort By</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_settings_pin">Enter Settings PIN</string>
    <string name="force_direct">Force direct</string>
    <string name="unsupported">unsupported</string>
    <string name="unresolved">resolving stream...</string>
    <string name="results">Results</string>
    <string name="waiting_for_query">Enter search query</string>
    <string name="suggestions">Suggestions</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="increment">Increment</string>
    <string name="decrement">Decrement</string>
    <string name="reset">Reset</string>
    <string name="replace">Replace</string>
    <string name="format_recently_used">Recently used %1$s</string>
    <string name="debug_tests">Debugging Tests</string>
    <string name="format_percent" formatted="true">%1$d\%%</string>
    <string name="format_pixels" formatted="true">%1$.1fpx</string>
    <string name="format_degrees" formatted="true">%1$d°</string>
    <string name="transcode">Transcode</string>
    <string name="force_transcode">Force transcode</string>
    <string name="direct">Direct</string>
    <string name="zero">0</string>
    <string name="play_slideshow">Play Slideshow</string>
    <string name="stop_slideshow">Stop Slideshow</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="more_like_this_scene">More like this scene</string>
    <string name="more">More</string>
    <string name="id">ID</string>
    <string name="selected" tools:override="true">Selected</string>
    <string name="codec">Codec</string>
    <string name="supported">Supported</string>
    <string name="labels">Labels</string>
    <string name="stream_details">Stream Details</string>
    <string name="play_direct">Play direct</string>
    <string name="play_transcoding">Play with transcoding</string>
    <string name="add_tag">Add Tag</string>
    <string name="add_performer">Add Performer</string>
    <string name="add_group">Add Group</string>
    <string name="studio_favorited">Studio favorited!</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="shift_seconds">Shift Seconds</string>
    <string name="start_playback_without_audio">Always start playback with no audio</string>
    <string name="save_end_time">Save end time</string>
    <string name="play">Play</string>
    <string name="change_primary_tag">Change primary tag</string>
    <string name="timestamps">Timestamps</string>
    <string name="slideshow_at_beginning">At beginning</string>
    <string name="no_more_images">No more images</string>
    <string name="searching">Searching...</string>
    <string name="ui_settings">Advanced UI Settings</string>
    <string name="set_rating">Set rating:</string>
    <string name="set_studio">Set Studio</string>
    <string name="play_from_here">Play from here</string>
    <string name="add_gallery">Add Gallery</string>
    <string name="play_all_markers">Play all markers</string>
    <string name="submit_without_saving">Submit without saving</string>
    <string name="save_and_submit">Save and submit</string>
    <string name="modifier">Modifier</string>
    <string name="scenes_together">View scenes together</string>
    <string name="no_filters_set">No filters set</string>
    <string name="success">Success</string>
    <string name="add_server">Add Server</string>
    <string name="switch_server">Switch server</string>
    <string name="test_connection">Test Connection</string>
    <string name="value_hours" formatted="true">%1$s hours</string>
    <string name="value_minutes" formatted="true">%1$s minutes</string>
    <string name="value_seconds" formatted="true">%1$s seconds</string>
    <string name="value_milliseconds" formatted="true">%1$s ms</string>
    <string name="save_for_gallery">Save for gallery</string>
    <string name="basic_interface">Interface</string>
    <string name="external_hardware_funscripts">External Hardware (Funscripts)</string>
    <string name="handy_test_connection_title">Test Connection</string>
    <string name="handy_test_connection_summary">Verify the connection key works</string>
    <string name="handy_delay_compensation_title">Server Compensation (ms)</string>
    <string name="handy_delay_compensation_summary">Adjust the synchronization delay (e.g. -150 or 200)</string>
    <string name="handy_test_hardware_title">Test Hardware Slider</string>
    <string name="handy_test_hardware_summary">Move slider to 0 then 100 within 3 seconds</string>
    <string name="pref_key_handy_delay_compensation" translatable="false">handy_delay_compensation</string>
    <string name="handy_sync_time_title">Sync Time Now</string>
    <string name="handy_sync_time_summary">Measure roundtrip delay to the Handy servers</string>
    <string name="manage_servers">Manage Servers</string>
    <string name="add_remove_servers_summary">Add, remove, or change servers</string>
    <string name="play_video_previews">Play video previews</string>
    <string name="more_ui_settings">More UI Settings</string>
    <string name="more_ui_settings_summary">Go to advanced UI settings</string>
    <string name="play_video_previews_summary_on">Video preview will play when item is selected</string>
    <string name="play_video_previews_summary_off">Video previews will not play</string>
    <string name="skip_forward_preference">Skip forward (seconds)</string>
    <string name="skip_back_preference">Skip back (seconds)</string>
    <string name="playback_finished_behavior">Playback finished behavior</string>
    <string name="auto_submit_pin">Auto submit PIN</string>
    <string name="auto_submit_pin_summary">Submit PIN automatically when typed</string>
    <string name="current_server">Current server</string>
    <string name="pin_code">Protect with PIN code</string>
    <string name="card_size_title">Card size</string>
    <string name="read_only_mode">Read only mode</string>
    <string name="set_app_pin_code">If set, it must be entered whenever the app is opened</string>
    <string name="read_only_pin_description">"Enabling this will prevent the app from making any server side changes.\n\nIf Scene Play history is enabled on the server and in app, then it will still be saved to the server.\n\nAdditionally, the PIN will be required to change any app settings."</string>
    <string name="remember_selected_tab">Remember selected tab?</string>
    <string name="remember_selected_tab_summary_on">Start on previously selected tab</string>
    <string name="remember_selected_tab_summary_off">Start on first tab</string>
    <string name="video_preview_delay">Delay before playing card previews</string>
    <string name="advanced_ui">Advanced UI</string>
    <string name="slideshow_duration">Slideshow duration</string>
    <string name="slideshow_image_clip_delay">Slideshow pause after image clips</string>
    <string name="show_hide_tabs">Show/Hide tabs</string>
    <string name="new_ui">New UI</string>
    <string name="use_new_ui">Use new UI</string>
    <string name="show_grid_jump_buttons">Show grid jump butons</string>
    <string name="choose_theme">Choose theme</string>
    <string name="theme_style_preference_title">Theme coloring (Light/Dark)</string>
    <string name="show_progress_when_skipping">Show progress when skipping</string>
    <string name="movement_sounds">Movement sound effects</string>
    <string name="movement_sounds_summary">Applies to new UI only</string>
    <string name="up_down_next_previous_pref_title">Use Up/Down for Previous/Next</string>
    <string name="captions_default">Turn captions on by default</string>
    <string name="captions_default_summary">Whether to turn captions for the device\'s language on by default</string>
    <string name="enabled_for_scenes_and_markers">Enabled for scene and marker playlists</string>
    <string name="scroll_next_view_all">Scroll to next on View All</string>
    <string name="scroll_next_view_all_summary">Automatically scroll down to the \'next\' results when clicking View All on main page</string>
</resources>