<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            style="@style/DebugInfoOverlayText"
            tools:text="@string/id" />

        <TextView
            style="@style/DebugInfoOverlayText"
            tools:text="@string/stashapp_type" />

        <TextView
            style="@style/DebugInfoOverlayText"
            tools:text="@string/selected" />

        <TextView
            style="@style/DebugInfoOverlayText"
            tools:text="@string/codec" />

        <TextView
            style="@style/DebugInfoOverlayText"
            tools:text="@string/supported" />

        <TextView
            style="@style/DebugInfoOverlayText"
            tools:text="@string/labels" />

</TableRow>
