<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">

    <Button
        android:id="@+id/jump_up_2_button"
        android:layout_width="@dimen/jump_button"
        android:layout_height="@dimen/jump_button"
        style="@style/JumpButton"
        android:text="@string/fa_angles_up"
        android:nextFocusDown="@id/jump_up_1_button">
    </Button>
    <Button
        android:id="@+id/jump_up_1_button"
        android:layout_width="@dimen/jump_button"
        android:layout_height="@dimen/jump_button"
        style="@style/JumpButton"
        android:text="@string/fa_angle_up"
        android:nextFocusUp="@id/jump_up_2_button"
        android:nextFocusDown="@id/jump_down_1_button">
    </Button>
    <Button
        android:id="@+id/jump_down_1_button"
        android:layout_width="@dimen/jump_button"
        android:layout_height="@dimen/jump_button"
        style="@style/JumpButton"
        android:text="@string/fa_angle_down"
        android:nextFocusUp="@id/jump_up_1_button"
        android:nextFocusDown="@id/jump_down_2_button">
    </Button>
    <Button
        android:id="@+id/jump_down_2_button"
        android:layout_width="@dimen/jump_button"
        android:layout_height="@dimen/jump_button"
        style="@style/JumpButton"
        android:text="@string/fa_angles_down"
        android:nextFocusUp="@id/jump_down_1_button">
    </Button>


</LinearLayout>
